<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <HorizontalScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal"
        android:fillViewport="true">
    <TableLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <TableRow
        android:padding="5dp"
        android:background="@color/header"
        android:id="@+id/rowHeader">
        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:maxWidth="150dp"
            android:ellipsize="end"
            android:text="@string/place_name"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
           />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:maxWidth="100dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/place_rating"/>

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:maxWidth="250dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/phone_number" />
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:maxWidth="250dp"
            android:text="@string/place_url"/>
    </TableRow>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rows"/>
    </TableLayout>
    </HorizontalScrollView>
  
</LinearLayout>